--- a/page1.html
+++ b/page1.html
@@ -7,7 +7,30 @@
     <title> Page 1</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Page 1</h1>
+<body class="FE">
+    <h1>First Email</h1>
+    <table border="1">
+        <tr>
+            <th><a href="index.html"> Homepage</a></th>
+            <th><a href="page1.html"> 1978 First Email</a></th>
+            <th><a href="page2.html"> 1991 First Email From Space</a></th>
+            <th><a href="page3.html"> 1992 Attaching Files</a></th>
+            <th> <a href="page4.html"> 1993 The name became Email</a></th>
+           <th><a href="page5.html"> 1998 Spam Appeared </a></th>
+        </tr>
+        <tr>
+            <th></th>
+            <th>1978</th>
+            <th>1991</th>
+            <th>1992</th>
+            <th>1993</th>
+            <th>1998</th>
+        
+        </tr>
+    </table>
+
+    <h1 class="DE2">First Email</h1>
+   <center><img src="https://th.bing.com/th/id/OIP.ur7g4yIgBecax5avWwgACAHaFF?w=234&h=180&c=7&r=0&o=5&pid=1.7" alt="https://www.bing.com/images/search?view=detailV2&ccid=ur7g4yIg&id=3B3D6987FD213ADF1DE53B84EF3849534D842EBF&thid=OIP.ur7g4yIgBecax5avWwgACAHaFF&mediaurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.babee0e3222005e71ac796af5b080008%3frik%3dvy6ETVNJOO%252bEOw%26riu%3dhttp%253a%252f%252ffossbytes.com%252fwp-content%252fuploads%252f2016%252f03%252fray-tomlinson-dead.jpg%26ehk%3dHDatRVqUlhuuQ2DyODg4wyd06y2gfezx7pT%252b4mtO2V8%253d%26risl%3d%26pid%3dImgRaw%26r%3d0&exph=776&expw=1129&q=first+email+picture&simid=607988939463204834&FORM=IRPRST&ck=882B649C7DBBF8DFAFD0A5AF681A3F9F&selectedIndex=23&ajaxhist=0&ajaxserp=0"></center>
+
 </body>
 </html>
