--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,30 @@
     <title>Page 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Page 2</h1>
+<body class="FEFS">
+    <h1>First Email From Space</h1>
+    <table border="1">
+        <tr>
+            <th><a href="index.html"> Homepage</a></th>
+            <th><a href="page1.html"> 1978 First Email</a></th>
+            <th><a href="page2.html"> 1991 First Email From Space</a></th>
+            <th><a href="page3.html"> 1992 Attaching Files</a></th>
+            <th> <a href="page4.html"> 1993 The name became Email</a></th>
+           <th><a href="page5.html"> 1998 Spam Appeared </a></th>
+        </tr>
+        <tr>
+            <th></th>
+            <th>1978</th>
+            <th>1991</th>
+            <th>1992</th>
+            <th>1993</th>
+            <th>1998</th>
+        
+        </tr>
+    </table>
+
+    <h1 class="DE6">First Email From Space</h1>
+    <center><img src="https://th.bing.com/th/id/OIP.TTAbWWBS7EapUZHpzwRh4gHaDt?w=330&h=175&c=7&r=0&o=5&pid=1.7" alt="https://www.bing.com/images/search?view=detailV2&ccid=TTAbWWBS&id=53F5F88132A5D6F90A2ABFC249A96CDFFDBF0BFE&thid=OIP.TTAbWWBS7EapUZHpzwRh4gHaDt&mediaurl=https%3a%2f%2f1.bp.blogspot.com%2f-wp3TIcGoHJ8%2fYQmE8P0f5bI%2fAAAAAAABmKI%2fHCXwbBmGfYcykImPGZBlo5xHO4y1Sm6JACLcBGAsYHQ%2fs1024%2fFirst_space_email.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.4d301b596052ec46a95191e9cf0461e2%3frik%3d%252fgu%252f%252fd9sqUnCvw%26pid%3dImgRaw%26r%3d0&exph=512&expw=1024&q=first+email+from+space+picture&simid=608028839707025992&FORM=IRPRST&ck=2170567824896AF1A3D0BE744B7F2FD6&selectedIndex=4&ajaxhist=0&ajaxserp=0"></center>
+
 </body>
 </html>
