--- a/page3.html
+++ b/page3.html
@@ -7,7 +7,31 @@
     <title>Page 3</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Page3</h1>
+<body class="AF">
+    <h1>Attatching Files</h1>
+
+    <table border="1">
+        <tr>
+            <th><a href="index.html"> Homepage</a></th>
+            <th><a href="page1.html"> 1978 First Email</a></th>
+            <th><a href="page2.html"> 1991 First Email From Space</a></th>
+            <th><a href="page3.html"> 1992 Attaching Files</a></th>
+            <th> <a href="page4.html"> 1993 The name became Email</a></th>
+           <th><a href="page5.html"> 1998 Spam Appeared </a></th>
+        </tr>
+        <tr>
+            <th></th>
+            <th>1978</th>
+            <th>1991</th>
+            <th>1992</th>
+            <th>1993</th>
+            <th>1998</th>
+        
+        </tr>
+    </table>
+
+    <h1 class="DE3">Attatching Files</h1>
+    <center><img src="https://th.bing.com/th/id/OIP.Akx30Impsfo05FhFbYqYXQAAAA?w=207&h=184&c=7&r=0&o=5&pid=1.7" alt="https://www.bing.com/images/search?view=detailV2&ccid=Akx30Imp&id=FD55095B2C01051C05FC345C4D5E986327E34001&thid=OIP.Akx30Impsfo05FhFbYqYXQAAAA&mediaurl=https%3a%2f%2fwww.webdevelopersnotes.com%2ftips%2fwindows_live_mail%2femail_attachment_button.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.024c77d089a9b1fa34e458456d8a985d%3frik%3dAUDjJ2OYXk1cNA%26pid%3dImgRaw%26r%3d0%26sres%3d1%26sresct%3d1%26srh%3d799%26srw%3d901&exph=355&expw=400&q=attactching+files+to+email&simid=607997495043977083&FORM=IRPRST&ck=0DA8580EF2786103ABB4CEDA49C245EB&selectedIndex=2&ajaxhist=0&ajaxserp=0"></center>
+
 </body>
 </html>
